[gd_scene load_steps=2 format=3 uid="uid://dcqv5cyqjktaq"]

[ext_resource type="Script" path="res://prog122i.gd" id="1_w7ttd"]

[node name="prog122i" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w7ttd")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1156.0
offset_bottom = 418.0

[node name="calc" type="Button" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = 516.0
offset_right = 226.0
offset_bottom = 650.0
text = "Calculate"

[node name="clear" type="Button" parent="."]
layout_mode = 0
offset_left = 464.0
offset_top = 514.0
offset_right = 692.0
offset_bottom = 648.0
text = "Clear"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 926.0
offset_top = 516.0
offset_right = 1154.0
offset_bottom = 650.0
text = "Exit"

[connection signal="pressed" from="calc" to="." method="_on_calc_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
